<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignInActivity">

        <include
            android:id="@+id/header"
            layout="@layout/header"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:onClick="@{clickListener}"
                    android:src="@drawable/ic_user_profile"
                    app:civ_border_color="@color/grey"
                    app:civ_border_width="@dimen/_2sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPerson"
                    style="@style/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/ivProfile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtperson"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1000"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tilPerson">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/email_address"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCnfPassword"
                    style="@style/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCnfPassword"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilBio"
                    style="@style/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tilCnfPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtBio"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawablePadding="@dimen/_10sdp"
                        android:gravity="start|top"
                        android:hint="@string/description"
                        android:imeOptions="actionDone"
                        android:inputType="text|textMultiLine"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:onClick="@{clickListener}"
                    android:text="@string/sign_in"
                    app:cornerRadius="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tilBio" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semi_bold"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:onClick="@{clickListener}"
                    android:text="@string/already_have_an_account_sign_in"
                    android:textColor="@color/backgroundColour"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>