<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_5sdp"
        android:elevation="@dimen/_5sdp"
        android:minWidth="@dimen/_270sdp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                style="@style/labelBold"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMessage"
                style="@style/labelRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                tools:text="Message"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/consButton"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/txtMessage">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNagetive"
                    style="@style/buttonBorder"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="@string/no"
                    app:cornerRadius="@dimen/_8sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPositive"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/yes"
                    android:textColor="@color/backgroundColour"
                    app:cornerRadius="@dimen/_8sdp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAlert"
                style="@style/button"
                android:visibility="gone"
                android:paddingStart="@dimen/_22sdp"
                android:paddingEnd="@dimen/_22sdp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/okay"
                android:textColor="@color/backgroundColour"
                app:cornerRadius="@dimen/_8sdp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


</RelativeLayout>